[tool:pytest]
python_files=test_*.py
testpaths = tests
addopts=-s -p no:doctest --flake8 --cov=./
norecursedirs=pyprometheus build bin dist docs .git
flake8-max-line-length = 100
flake8-ignore =
    *.py E501
    main/settings/*.py F403 F401
    */migrations/* ALL

[flake8]
ignore = E501,F403,F401,D100,D101,D102,D103,I004,I001,I003,Q000,D205,D400,D105
max-line-length = 100
exclude = .tox,.git,docs,.ropeproject
inline-quotes = double


[bdist_wheel]
universal = 1

[coverage:run]
omit =
     conftest.py
     *test_*.py
     *tests_*.py
     fabfile.py
     setup.py
     .eggs/*
     .tox/*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover


[metadata]
description-file = README.rst